@@ -1,5 +1,9 @@
 2002-06-12  Damien Sandras  <dsandras@seconix.com>
 
+	* src/toolbar.cpp: Sets "callto://" as prefix for the empty URL.
+	
+2002-06-12  Damien Sandras  <dsandras@seconix.com>
+
 	* src/toolbar.cpp: Set the current URL as tooltip for the 
 	entry of the combo box.
 	
